flambda-backend/tests/simd/errors/i16c8.expected
File "i16c8.ml", line 1:
Error: Did not find constant int arguments for caml_int16x8_const8
